fix: apply all critical bug fixes to backend